parse-display/tests/compile_fail/display/struct_no_display_field.rs
use parse_display::Display;

#[derive(Display)]
struct TestStruct {
    x: NoDisplay,
}
struct NoDisplay;

fn main() {}
